Add more tests and improvements to hot and buffs code